[tool.poetry]
name = "assistant"
version = "1.0"
description = ""
authors = ["Martynov Viktor"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytelegrambotapi = "^4.16.1"
build = "^1.2.1"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
geopy = "^2.4.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
