[tool.poetry]
name = "assistant"
version = "1.0.0"
description = ""
authors = ["Martynov Viktor"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pytelegrambotapi = "^4.16.1"
build = "^1.2.1"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
geopy = "^2.4.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
